# hand_eye_calibration_cpp

./: CMakeLists.txt  README.md  package.xml
data/: zivid_settings_110619
data/calib080419/: extrinsics.yml  intrinsics.yml
data/calib080419/pose/: pose00.yml  pose01.yml  pose02.yml  pose04.yml  pose05.yml  pose06.yml  pose07.yml  pose08.yml  pose09.yml  pose10.yml  pose11.yml  pose12.yml  pose13.yml  pose14.yml  pose15.yml  pose16.yml  pose17.yml  pose18.yml  pose19.yml
data/calib_110619_chessboard_small/: extrinsics.yml
data/calib_110619_chessboard_small/pose/: pose00.yml  pose01.yml  pose02.yml  pose03.yml  pose04.yml  pose05.yml  pose06.yml  pose07.yml  pose08.yml  pose09.yml  pose10.yml  pose11.yml  pose12.yml  pose13.yml  pose14.yml  pose15.yml  pose16.yml  pose17.yml  pose18.yml  pose19.yml
data/pose_recorder_test/: pose00.yml
include/hand_eye_calibration/: camparam_io.h  chessboard.h  chessboard_calib.h  chessboard_extrinsics.h  hand_eye_calib.h  robot_pose_io.h
launch/: lab_recorder_pointcloud.launch  lab_recorder_pointcloud_to_img.launch  recorder.launch
rqt_perspective/: handeye_plot_rotations.perspective  handeye_translation_plot.perspective
src/: calibrate_handeye.cpp  record_event.cpp  reference_test.cpp
src/hand_eye_calibration/: camparam_io.cpp  chessboard.cpp  chessboard_calib.cpp  chessboard_extrinsics.cpp  hand_eye_calib.cpp  robot_pose_io.cpp
